# tuneplayerbot

./: .env.example  .gitignore  Dockerfile  Tunebot тАФ Multi-Source Music Bot (Plan + Code) 271b5241252c43388fd97a27532f2135.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  logging_config.py  main.py  workers.py
app/bot/: app.py  keyboards.py  translations.py  utils.py
app/bot/handlers/: admin.py  start.py  url.py
app/db/: models.py  session.py
app/repositories/: chat_log_repo.py  track_repo.py  user_repo.py
app/services/: download_service.py  resolver.py  spotify_service.py  types.py  yandex_service.py  youtube_service.py
