[project]
name = "tunebot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[job-queue]==21.6",
    "yt-dlp>=2024.10.0",
    "mutagen",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic-settings>=2.5",
    "arq>=0.26",
    "redis>=5.0",
    "python-dotenv>=1.0",
]
